...
              ),
            ],
          ),
          child: Material(
            color: Colors.transparent,
            child: InkWell(
              key: Key('business_invite_key'),
              onTap: () {
                debugPrint('W_invite_user => INVITE USER Clicked!');

                /*final RenderBox box = context.findRenderObject();
                                                    Share.share(AppLocalizations.of(context).share, subject: 'Test', sharePositionOrigin: box.localToGlobal(Offset.zero) & box.size);*/
                StoreProvider.of<AppState>(context).dispatch(BookingListRequest(StoreProvider.of<AppState>(context).state.business.id_firestore));
...
