...
                                        margin: EdgeInsets.only( right: SizeConfig.safeBlockHorizontal * 4),
                                        child: Row(
                                          mainAxisAlignment: MainAxisAlignment.end,
                                          crossAxisAlignment: CrossAxisAlignment.center,
                                          children: [
                                            FloatingActionButton(
                                              key: Key('create_booking_key'),
                                              backgroundColor: BuytimeTheme.Secondary,
                                              onPressed: () async {
                                                Navigator.push(context, MaterialPageRoute(builder: (context) => BookingCreation()));
                                              },
                                              shape: RoundedRectangleBorder(
                                                  borderRadius: new BorderRadius.circular(500.0)),
...
