...
                        child: Row(
                          mainAxisAlignment: MainAxisAlignment.spaceBetween,
                          children: [
                            Padding(
                              padding: const EdgeInsets.symmetric(vertical: 0.0, horizontal: 0.0),
                              child: IconButton(
                                key: Key('back_from_booking_page_key'),
                                icon: const Icon(
                                  Icons.keyboard_arrow_left,
                                  color: Colors.white,
                                  size: 25.0,
                                ),
                                tooltip: AppLocalizations.of(context).comeBack,
...

                                              ///Search
                                              Container(
                                                margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 2, left: SizeConfig.safeBlockHorizontal * 3.5, right: SizeConfig.safeBlockHorizontal * 5, bottom: SizeConfig.safeBlockVertical * 4),
                                                height: SizeConfig.safeBlockHorizontal * 20,
                                                child: TextFormField(
                                                  key: Key('guest_search_field_key'),
                                                  controller: _searchController,
                                                  textAlign: TextAlign.start,
                                                  textInputAction: TextInputAction.search,
                                                  decoration: InputDecoration(
                                                    enabledBorder: OutlineInputBorder(borderSide: BorderSide(color: Color(0xffe0e0e0)), borderRadius: BorderRadius.all(Radius.circular(10.0))),
                                                    focusedBorder: OutlineInputBorder(borderSide: BorderSide(color: Color(0xff666666)), borderRadius: BorderRadius.all(Radius.circular(10.0))),
...
                                                    helperStyle: TextStyle(
                                                      fontFamily: BuytimeTheme.FontFamily,
                                                      color: Color(0xff666666),
                                                      fontWeight: FontWeight.w400,
                                                    ),
                                                    suffixIcon: InkWell(
                                                      key: Key('guest_search_button_key'),
                                                      onTap: () {
                                                        debugPrint('UI_U_booking_page => done');
                                                        FocusScope.of(context).unfocus();
                                                        setState(() {
                                                          searched = _searchController.text;
                                                        });
...
