...
  @override
  Widget build(BuildContext context) {
    return OpenContainer<bool>(
      key: index == 0
          ? StoreProvider.of<AppState>(context).state.bookingList.bookingListState.isEmpty ?
      Key('invite_key') :
      Key('my_bookings_key')
          : Key('discover_key'),
      transitionType: ContainerTransitionType.fadeThrough,
      openBuilder: (BuildContext context, VoidCallback _) {
        if (index == 0) {
          if (StoreProvider.of<AppState>(context).state.bookingList.bookingListState.isEmpty)
            return InviteGuestForm(
...
