...
                                          children: [
                                            ///Email address
                                            Expanded(
                                              child: Container(
                                                  margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 3, left: SizeConfig.safeBlockHorizontal * 3.5, right: SizeConfig.blockSizeHorizontal * 5),
                                                  child: TextFormField(
                                                    key: Key('self_email_key'),
                                                    controller: _emailToInviteController,
                                                    textAlign: TextAlign.start,
                                                    keyboardType: TextInputType.emailAddress,
                                                    textInputAction: TextInputAction.next,
                                                    autofillHints: [AutofillHints.email],
                                                    decoration: InputDecoration(
...

                                            ///Name
                                            Expanded(
                                              child: Container(
                                                  margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 3, left: SizeConfig.safeBlockHorizontal * 3.5, right: SizeConfig.blockSizeHorizontal * 5),
                                                  child: TextFormField(
                                                    key: Key('self_name_key'),
                                                    controller: _nameController,
                                                    textAlign: TextAlign.start,
                                                    textInputAction: TextInputAction.next,
                                                    decoration: InputDecoration(
                                                      filled: true,
                                                      fillColor: BuytimeTheme.DividerGrey,
...

                                            ///Surname
                                            Expanded(
                                              child: Container(
                                                  margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 3, left: SizeConfig.safeBlockHorizontal * 3.5, right: SizeConfig.blockSizeHorizontal * 5),
                                                  child: TextFormField(
                                                    key: Key('self_surname_key'),
                                                    controller: _surnameController,
                                                    textAlign: TextAlign.start,
                                                    textInputAction: TextInputAction.done,
                                                    decoration: InputDecoration(
                                                      filled: true,
                                                      fillColor: BuytimeTheme.DividerGrey,
...
                                                    mainAxisAlignment: MainAxisAlignment.start,
                                                    crossAxisAlignment: CrossAxisAlignment.start,
                                                    children: [
                                                      ///Check In
                                                      Expanded(
                                                          child: GestureDetector(
                                                            key: Key('self_check_in_key'),
                                                        onTap: () async {
                                                          await _selectDate(context, checkIn, checkOut);
                                                        },
                                                        child: TextFormField(
                                                          //enabled: false,
                                                          readOnly: true,
...

                                            ///Number of guests
                                            Expanded(
                                              child: Container(
                                                  margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 3, left: SizeConfig.safeBlockHorizontal * 3.5, right: SizeConfig.blockSizeHorizontal * 5),
                                                  child: TextFormField(
                                                    key: Key('self_guests_key'),
                                                    controller: _numberOfGuestsController,
                                                    textAlign: TextAlign.start,
                                                    textInputAction: TextInputAction.done,
                                                    decoration: InputDecoration(
                                                      filled: true,
                                                      fillColor: BuytimeTheme.DividerGrey,
...
                                              width: 180,

                                              ///media.width * .5
                                              height: 44,
                                              margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 4),
                                              child: MaterialButton(
                                                key: Key('create_self_invite_key'),
                                                elevation: 0,
                                                hoverElevation: 0,
                                                focusElevation: 0,
                                                highlightElevation: 0,
                                                onPressed: () {

...
