...
                              color: BuytimeTheme.TextMedium,
                            )),
                      ),*/

                                ///Log out
                                ListTile(
                                  key: Key('log_out_key'),
                                  leading: Icon(Icons.logout, color: BuytimeTheme.TextMedium, size: 24),
                                  onTap: () async {
                                    SharedPreferences prefs = await SharedPreferences.getInstance();
                                    await storage.write(key: 'bookingCode', value: '');
                                    FirebaseAuth.instance.signOut().then((_) {
                                      googleSignIn.signOut();
...
